# test

0_pipeline_runner/: Cargo.toml
0_pipeline_runner/generated_cyvr_probe/: airport_cones.json
0_pipeline_runner/generated_cyvr_probe/cone_specs/: CYVR_spec.txt
0_pipeline_runner/generated_ui/: airport_cones.json  pipeline_plan.json
0_pipeline_runner/specs/: README.txt
0_pipeline_runner/specs/template_tampa/: airport_cones.json  precision_KTPA.csv  truth_geotiffs_KTPA.ps1  truth_geotiffs_KTPA.sh
0_pipeline_runner/src/: lib.rs  main.rs
0_pipeline_runner/template_tampa/specs/: KTPA_spec.txt
10_step_generative_fix/: Cargo.toml  README.md  SUPER_GENERATIVE_FILL_RUST_DOC.md  apply_fill_image_to_xy_tiles.py  auto_fix_z14_z15.py  download_kjfk_z14_r2_c1_c2_tiles.py  download_klga_z14_r1c1_r2c2_tiles.py  fill_klga_z16_dark_gaps_from_neighbors.py  fill_missing_cones_from_higher_zooms.py  fill_placeholder_tiles.py  flatten_xy_to_nested_xyz.py  patch_klga_z16_from_adjacent_zooms.py  rebuild_target_cones.py  repair_tiles_from_higher_zoom.py  step10_legacy_tools.py  verify_and_prepare_gray_fix.py
10_step_generative_fix/patch_library/: README.md  catalog.json
10_step_generative_fix/src/: lib.rs  main.rs  upsample.rs
1_step_airport_indexer/: Cargo.toml  README.md  TILE_INDEX_MASTER_KEY_fixed_kmwl.txt  build_all_airports_from_minimal_specs.py  build_cones_from_tile_index.py  data.txt  legacy_airport_tools.py  manual_specs.json  spec_generator.py  spec_generator2.py  spec_generator3.py  spec_manual.py
2_step_rust_downloader/: Cargo.toml  README.md  download_klga_gray_hotspot_z14_z15.py
2_step_rust_downloader/src/: lib.rs  main.rs
3_step_rust_brcj/: BRCJ_COATED_TILES.csv  Cargo.toml  README.md  run_brcj_ksan.sh
4_step_pgw_rust/: Cargo.toml  add_pgw_flat_xy_tiles.py  create_pgw_sidecars.py  merge_rust.md
5_step_geotiff_to_heaven/: Cargo.toml  README.md  README_Geotiff_Instructions.md
6_step_rust_imagery_tiler/: Cargo.toml  global_cesium_tiler_command.txt
8_step_merge_tiles/: Cargo.toml  README.md  merge_tiles_v2.py
8_step_merge_tiles/src/: lib.rs  main.rs
X_script_tools_rust/: Cargo.toml  README.md
X_script_tools_rust/src/: lib.rs
(+21 files in other folders)
