[package]
name = "pipeline_runner"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pipeline_core = { path = "../X_pipeline_core" }
cone_to_heaven_rust = { path = "../5_step_geotiff_to_heaven" }
move_sqls_rust = { path = "../9_step_move_sqls" }
walkdir = "2"
