[package]
name = "generative_fix_rust"
version = "1.5.2"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
md5 = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
tempfile = "3"
walkdir = "2"
pipeline_core = { path = "../X_pipeline_core" }
script_tools_rust = { path = "../X_script_tools_rust" }
