[package]
name = "script_tools_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
md5 = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
